ingress/n-service-ingress-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: ingress-nginx
spec:
  ports:
  - port: 80
    targetPort: http
    name: http
  - port: 8087
    targetPort: custom-port
    name: custom-port
  selector:
    app: nginx-ingress-controller
