ingress/n-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awx-demo-service
  namespace: ingress-nginx
spec:
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30807
  selector:
    app: awx
  type: ClusterIP
